(lang dune 3.20)

(name experiments-in-ocaml)

(generate_opam_files true)

(source
 (github david2am/lab))

(authors "David")

(maintainers "David")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name experiments-in-ocaml)
 (synopsis "This is a set of OCaml experiments")
 (description
  "\n  I'll put here exercises from different sources\n  to learn concepts and language features\n ")
 (depends ocaml)
 (tags
  ("OCaml" "tutorials" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
